--- a/docs/index.scss
+++ b/docs/index.scss
@@ -9,7 +9,7 @@ body {
     background: $bac-col;
     font-family: 'Bitter', 'serif';
     color: #ccc;
-    max-width: 1024px;
+    max-width: 1280px;
     margin: auto;
     hyphens: auto;
     line-height: 1.5;
@@ -19,10 +19,11 @@ body {
 .banner {
     background-color: $acc-col;
     color: #eee;
-    height: 15rem;
+    height: 18rem;
     &__text {
         text-align: center;
         margin: auto;
+        padding: 1rem;
         &__header {
             padding-top: 3rem;
         }
@@ -32,8 +33,42 @@ body {
 }
 
 .intro {
+    padding: 1rem;
     max-width: 512px;
     margin: auto;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 4rem;
+    &__item {
+        flex-grow: 1;
+        // border: $pri-col 2px solid;
+        background-color: #666;
+        border-radius: 0.5rem;
+        margin: 0 0.5rem 5rem 0.5rem;
+        max-width: 300px;
+        padding: 0.5rem;
+        &__thumbnail {
+            width: 100%;
+        }
+        &__title, &__desc {
+            // margin: 0;
+            line-height: 1;
+            color: #fff;
+            text-align: center;
+        }
+        &__title {
+            font-size: 1.2rem;
+            font-weight: 700;
+        }
+        &__desc {
+            font-size: 0.8rem;
+        }
+    }
 }
 
 .footer {
