--- a/docs/index.scss
+++ b/docs/index.scss
@@ -46,12 +46,23 @@ body {
     margin-top: 4rem;
     &__item {
         flex-grow: 1;
-        // border: $pri-col 2px solid;
+        border: #666 2px solid;
         background-color: #666;
         border-radius: 0.5rem;
         margin: 0 0.5rem 5rem 0.5rem;
         max-width: 300px;
         padding: 0.5rem;
+        transition:
+            transform ease-in 200ms,
+            border ease-in 500ms,
+            box-shadow ease-in 300ms
+            ;
+        &:hover {
+            transform: translateY(-2rem) rotate(4deg);
+            border: $pri-col 2px solid;
+            box-shadow: 1rem 2rem #333;
+        }
+
         &__thumbnail {
             width: 100%;
         }
@@ -72,6 +83,7 @@ body {
 }
 
 .footer {
-    margin: 3rem auto 3rem auto;
+    padding: 2rem;
+    margin: 3rem auto 0 auto;
     text-align: center;
 }
