Add shadow to each item

--- a/docs/index.scss
+++ b/docs/index.scss
@@ -52,6 +52,7 @@ body {
         margin: 0 0.5rem 5rem 0.5rem;
         max-width: 300px;
         padding: 0.5rem;
+        box-shadow: 0.25rem 0.5rem #333;
         transition:
             transform ease-in 200ms,
             border ease-in 500ms,
