--- a/docs/index.css
+++ b/docs/index.css
@@ -45,6 +45,7 @@ body {
   margin: 0 0.5rem 5rem 0.5rem;
   max-width: 300px;
   padding: 0.5rem;
+  box-shadow: 0.25rem 0.5rem #333;
   transition: transform ease-in 200ms, border ease-in 500ms, box-shadow ease-in 300ms;
 }
 .gallery__item:hover {
