--- a/docs/index.scss
+++ b/docs/index.scss
@@ -46,6 +46,12 @@ body {
     margin: auto;
 }
 
+.instruction {
+    text-align: center;
+    max-width: 480px;
+    margin: auto;
+}
+
 .gallery {
     display: flex;
     flex-wrap: wrap;
