--- a/docs/index.css
+++ b/docs/index.css
@@ -39,6 +39,12 @@ body a:hover {
   margin: auto;
 }
 
+.instruction {
+  text-align: center;
+  max-width: 480px;
+  margin: auto;
+}
+
 .gallery {
   display: flex;
   flex-wrap: wrap;
