--- a/docs/index.scss
+++ b/docs/index.scss
@@ -29,13 +29,14 @@ body {
 .banner {
     background-color: $acc-col;
     color: #eee;
-    height: 18rem;
+    height: 20rem;
     &__text {
         text-align: center;
         margin: auto;
-        padding: 1rem;
+        padding: 2rem;
         &__header {
-            padding-top: 3rem;
+            padding-top: 1rem;
+            font-size: 3rem;
         }
     }
 }
