--- a/docs/index.scss
+++ b/docs/index.scss
@@ -12,6 +12,10 @@ body {
     color: #ccc;
     max-width: 1280px;
     margin: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -o-hyphens: auto;
     hyphens: auto;
     line-height: 1.5;
     padding: 0;
@@ -29,13 +33,11 @@ body {
 .banner {
     background-color: $acc-col;
     color: #eee;
-    height: 20rem;
     &__text {
         text-align: center;
         margin: auto;
-        padding: 2rem;
+        padding: 4rem 1rem;
         &__header {
-            padding-top: 1rem;
             font-size: 3rem;
         }
     }
